ssh 설정 내것으로 변경

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,22 +1,6 @@
-Host hyeon.me
-
 Host martini.snucse.org
 Host mimosa.snucse.org
 Host midori.snucse.org
-
-Host toor.snucse.org
-  User toor
-Host chundoong0.snu.ac.kr
-  User mc05
-
-Host upnl.org
-  User server
-Host wiki.upnl.org
-  User wiki
-Host uriel.upnl.org
-Host gemini.upnl.org
-Host edhelbroy.upnl.org
-  User root
 
 Host martini-admin
   User martini
@@ -28,11 +12,5 @@ Host midori-admin
   User midori
   HostName midori.snucse.org
 
-Host tcs.snu.ac.kr
-  User cp201522
-
-Host pnote.co.kr
-  User admin
-
 Host *
-  User simnalamburt
+  User wlxyzlw
